# playground

./: .clang-format  .gitignore  Cargo.toml  LICENSE  README.md  README.pt-br.md  makefile
c/: makefile
c/assets/: dset.out
c/include/: utils.h
computer-graphics/raycast/: image.c  image.h  raytrace.c  scene.c  sphere.c  sphere.h
cryptography/caesar-cipher/: README.md  README.pt-br.md
cryptography/des/: README.md  README.pt-br.md
data-structures/avl-tree/: README.md  README.pt-br.md
data-structures/binary-heap/: README.md  README.pt-br.md
data-structures/binary-search-tree/: README.md  README.pt-br.md
data-structures/disjoint-set/: README.md  README.pt-br.md
data-structures/list/: README.md  README.pt-br.md
data-structures/queue/: README.md  README.pt-br.md
data-structures/red-black-tree/: README.md  README.pt-br.md
data-structures/stack/: README.md  README.pt-br.md
data-structures/trie/: README.md  README.pt-br.md
data-structures/vector/: README.md  README.pt-br.md
evolutionary-algorithms/genetic-algorithm/: README.pt-br.md
go/: makefile
go/src/: main.go
include/: clock.h  utils.h
machine-learning/fnn/: README.pt-br.md
machine-learning/k-means/: README.md  README.pt-br.md
machine-learning/knn/: README.md  README.pt-br.md
machine-learning/q-learning/: README.md  README.pt-br.md
math/: makefile
math/euclidean-algorithm/: README.md  README.pt-br.md
math/matrix/: README.md  README.pt-br.md
searching/linear-search/rust/: Cargo.toml
searching/linear-search/rust/src/: main.rs
src/: clock.c  main.c
string/lcs/: README.md  (+1 more)
(+224 files in other folders)
