# Copyright (C) 2023 Pedro Henrique Penna <pedrohenriquepenna@outlook.com>

[workspace]
members = [
    "data-structures/stack/rust",
    "data-structures/vector/rust",
    "searching/binary-search/rust",
    "searching/interpolation-search/rust",
    "searching/exponential-search/rust",
    "searching/linear-search/rust",
    "sorting/bubble-sort/rust",
    "sorting/counting-sort/rust",
    "sorting/insertion-sort/rust",
    "sorting/selection-sort/rust",
    "sorting/quicksort/rust",
]
