# Copyright (C) 2023 Pedro Henrique Penna <pedrohenriquepenna@outlook.com>

[package]
name = "linear-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
anyhow = "1.0.68"
